# Robotcup-home-VisionPart-

./: README.md
tumgo_vision/: CMakeLists.txt  CMakeLists.txt~  model_pcd.pcd  package.xml
tumgo_vision/darknet/src/: detector.c  image.c
tumgo_vision/include/: helpers.h  tumgo_human_detection.h  tumgo_vision.h  tumgo_vision2D.h
tumgo_vision/launch/: nodes.launch  nodes.launch~
tumgo_vision/msg/tumgo_vision/: msgDetectObject.msg
tumgo_vision/scripts/: darknet.py
tumgo_vision/src/: main.cpp  tumgo_vision.cpp  tumgo_vision2D.cpp
tumgo_vision/src/tumgo_vision/: tumgo_human_detection.cpp
tumgo_vision/srv/tumgo_vision/: srvCloud.srv  srvConvert2D.srv  srvConvert3D.srv  srvDetectColorBlob.srv  srvDetectFace.srv  srvDetectFace.srv~  srvDetectHuman.srv  srvDetectObject2D.srv  srvDetectObject3D.srv  srvGetCloud.srv  srvGetFacePosition.srv  srvGetImage.srv  srvImage.srv  srvRecognition.srv  srvRecognition2D.srv  srvRecognition3D.srv  srvSegmentObjects.srv  srvSegmentPlanes.srv  srvSegmentPlanes.srv~  srvTrackObject.srv
tumgo_vision3D/: CMakeLists.txt  CMakeLists.txt~~  package.xml  package.xml~
tumgo_vision3D/include/: tumgo_vision3D.h  tumgo_vision3D.h~
tumgo_vision3D/src/: tumgo_vision3D.cpp  tumgo_vision3D.rviz
tumgo_vision3D/src/models/: apple.pcd  ball.pcd  cocacola_wide.pcd  lying_lamp.pcd  orange.pcd  short_cube.pcd  tall_cube.pcd  test_world
